--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   springboot-api-demo:
-    image: my_image
+    image: my_app
     ports:
       - "4005:8080"
     depends_on:
