double dot fcuck

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-
-spring.jpa.hibernate.ddl-auto=create
-
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://pgdb:5432/postgres
-spring.datasource.username=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://pgdb:5432/docker
+spring.datasource.username=docker
 spring.datasource.password=1234
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+pring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+#spring.datasource.schema=classpath:/schema.sql
+spring.datasource.continue-on-error=true
