--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,26 @@
-version: '3.1'
+version: '3.7'
 
 services:
-
-  springboot-api-demo:
-    image: my_app
+  springboot:
+    build: .
+    restart : always
     ports:
       - "4005:8080"
     depends_on:
       - postgres
   postgres:
     container_name: pgdb
-    image: postgres:9.6-alpine
+    image: postgres:latest
+    volumes:
+      - db_pgdata:/var/lib/postgresql/data_pg
+      - ./scripts/:/docker-entrypoint-initdb.d/
+    restart: always
     environment:
-    - 'POSTGRES_ROOT_PASSWORD=postgres'
-    - 'POSTGRES_USER=postgres'
-    - 'POSTGRES_PASSWORD=1234'
+      - 'POSTGRES_DB=docker'
+      - 'POSTGRES_ROOT_PASSWORD=postgres'
+      - 'POSTGRES_USER=docker'
+      - 'POSTGRES_PASSWORD=1234'
     ports:
-    - "5432:5432"
+      - "5432:5432"
+volumes:
+  db_pgdata:
